// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`S3 package manager createPackage() group createPackage() 1`] = `
Array [
  Object {
    "Key": "/createPackage/package.json",
    "Size": 1912,
  },
]
`;

exports[`S3 package manager createPackage() group createPackage() fails by fileExist 1`] = `
Array [
  Object {
    "Key": "/createPackage/package.json",
    "Size": 1912,
  },
]
`;

exports[`S3 package manager createPackage() group deletePackage() group deletePackage() 1`] = `Array []`;

exports[`S3 package manager readPackage() group readPackage() fails 1`] = `
Array [
  Object {
    "Key": "/readme-test/package.json",
    "Size": 1158,
  },
  Object {
    "Key": "/readme-test/test-readme-0.0.0.tgz",
    "Size": 352,
  },
]
`;

exports[`S3 package manager readPackage() group readPackage() fails corrupt 1`] = `
Array [
  Object {
    "Key": "/readme-test-corrupt/corrupt.js",
    "Size": 0,
  },
]
`;

exports[`S3 package manager readPackage() group readPackage() success 1`] = `
Array [
  Object {
    "Key": "/readme-test/package.json",
    "Size": 1158,
  },
  Object {
    "Key": "/readme-test/test-readme-0.0.0.tgz",
    "Size": 352,
  },
]
`;

exports[`S3 package manager readTarball() group readTarball() fails 1`] = `
Array [
  Object {
    "Key": "/readme-test/package.json",
    "Size": 1158,
  },
  Object {
    "Key": "/readme-test/test-readme-0.0.0.tgz",
    "Size": 352,
  },
]
`;

exports[`S3 package manager readTarball() group readTarball() success 1`] = `
Array [
  Object {
    "Key": "/readme-test/package.json",
    "Size": 1158,
  },
  Object {
    "Key": "/readme-test/test-readme-0.0.0.tgz",
    "Size": 352,
  },
]
`;

exports[`S3 package manager removePackage() group removePackage() fails 1`] = `Array []`;

exports[`S3 package manager removePackage() group removePackage() success 1`] = `Array []`;

exports[`S3 package manager savePackage() group savePackage() 1`] = `
Array [
  Object {
    "Key": "/first-package/package.json",
    "Size": 10,
  },
]
`;

exports[`S3 package manager writeTarball() group writeTarball() abort 1`] = `
Array [
  Object {
    "Key": "/readme-test/package.json",
    "Size": 1158,
  },
  Object {
    "Key": "/readme-test/test-readme-0.0.0.tgz",
    "Size": 352,
  },
]
`;

exports[`S3 package manager writeTarball() group writeTarball() fails on existing file 1`] = `
Array [
  Object {
    "Key": "/readme-test/package.json",
    "Size": 1158,
  },
  Object {
    "Key": "/readme-test/test-readme-0.0.0.tgz",
    "Size": 352,
  },
]
`;

exports[`S3 package manager writeTarball() group writeTarball() success 1`] = `
Array [
  Object {
    "Key": "/readme-test/package.json",
    "Size": 1158,
  },
  Object {
    "Key": "/readme-test/test-readme-0.0.0.tgz",
    "Size": 352,
  },
  Object {
    "Key": "/write-storage/new-readme-0.0.0.tgz",
    "Size": 0,
  },
]
`;
